<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/gambar"
        android:layout_width="342dp"
        android:layout_height="147dp"
        android:layout_gravity="center"
        android:contentDescription="@string/gambar"
        android:paddingTop="15dp"
        android:src="@drawable/boy" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:id="@+id/cdScroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtlatihan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingBottom="10dp"
                        android:text="@string/textlatihan"
                        android:textColor="@color/green"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtbanyak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="@string/text"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:visibility="visible" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtIG"
                        android:layout_width="match_parent"
                        android:layout_height="41dp"
                        android:background="@drawable/click"
                        android:drawableStart="@drawable/ic_boy"
                        android:drawableEnd="@drawable/ic_next"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/ig"
                        android:textAlignment="inherit"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtGit"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/click"
                        android:drawableStart="@drawable/ic_boy"
                        android:drawableEnd="@drawable/ic_next"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/git"
                        android:textAlignment="inherit"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtberi"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/click"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/rating"
                        android:textAlignment="inherit"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtteman"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/click"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/beri"
                        android:textAlignment="inherit"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtkebijakan"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/click"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/kebijakan"
                        android:textAlignment="inherit"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/contact"
                android:textSize="30sp"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/txtwa"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_whatsapp"
                android:text="@string/wa"
                android:textSize="30sp"
                android:layout_marginStart="15dp" />

            <TextView
                android:id="@+id/txttelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telp"
                android:textSize="20sp"
                android:layout_marginStart="15dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>